--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/heading_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/home_heading"
