--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,10 +24,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/small_game_btn"
-        app:layout_constraintBottom_toTopOf="@id/large_game_btn"
+        app:layout_constraintBottom_toTopOf="@id/medium_game_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/medium_game_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/medium_game_btn"
+        app:layout_constraintBottom_toTopOf="@id/large_game_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/small_game_btn" />
 
     <Button
         android:id="@+id/large_game_btn"
@@ -37,5 +47,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/small_game_btn" />
+        app:layout_constraintTop_toBottomOf="@id/medium_game_btn" />
 </android.support.constraint.ConstraintLayout>
